--- a/CasusStartToBike/Views/Shared/_Layout.cshtml
+++ b/CasusStartToBike/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
