--- a/CasusStartToBike/Views/CycleRoutes/Index.cshtml
+++ b/CasusStartToBike/Views/CycleRoutes/Index.cshtml
@@ -1,24 +1,21 @@
 ﻿@model IEnumerable<CasusStartToBike.Models.CycleRoute>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Route Overzicht";
 }
 
-<h2>Index</h2>
+<h2>Route Overzicht</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Aanmaken", "Create", null, new { @class = "btn btn-success" })
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Badge.BadgeName)
+            @Html.DisplayNameFor(model => model.RouteName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.User.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RouteName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.RouteType)
@@ -29,19 +26,19 @@
         <th>
             @Html.DisplayNameFor(model => model.IsPublic)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Badge.BadgeName)
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Badge.BadgeName)
+            @Html.DisplayFor(modelItem => item.RouteName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.User.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RouteName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.RouteType)
@@ -51,6 +48,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.IsPublic)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Badge.BadgeName)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
