--- a/CasusStartToBike/Views/CycleEvents/Details.cshtml
+++ b/CasusStartToBike/Views/CycleEvents/Details.cshtml
@@ -1,98 +1,143 @@
 ﻿@model CasusStartToBike.Models.CycleEvent
-
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Fiets Evenement Details";
 }
 
-<h2>Details</h2>
+<h2>Fiets Evenement Details</h2>
 
-<div>
-    <h4>CycleEvent</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Badge.BadgeName)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Badge.BadgeName)
-        </dd>
+<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+    <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="pills-Event-tab" data-bs-toggle="pill" data-bs-target="#pills-Event" type="button" role="tab" aria-controls="pills-Event" aria-selected="true">Evenement</button>
+    </li>
+    <li class="nav-item" role="presentation">
+        <button class="nav-link" id="pills-Users-tab" data-bs-toggle="pill" data-bs-target="#pills-Users" type="button" role="tab" aria-controls="pills-Users" aria-selected="false">Deelnemers</button>
+    </li>
+</ul>
+<div class="tab-content" id="pills-tabContent">
+    <div class="tab-pane fade show active" id="pills-Event" role="tabpanel" aria-labelledby="pills-Event-tab">
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CycleRoute.RouteName)
-        </dt>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-        <dd>
-            @Html.DisplayFor(model => model.CycleRoute.RouteName)
-        </dd>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Id)
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.EventName, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.EventName, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                            </div>
+                        </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.User.Email)
-        </dt>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.EventStart, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.EventStart, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                            </div>
+                        </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.User.Email)
-        </dd>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.EventEnd, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.EventEnd, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                            </div>
+                        </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EventName)
-        </dt>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Location, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Location, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Difficulty, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Difficulty, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                            </div>
+                        </div>
+                    </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.EventName)
-        </dd>
+                    <div class="col">
+                        <hr />
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EventStart)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.EventStart)
-        </dd>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Badge.BadgeName, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Badge.BadgeName, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                            </div>
+                        </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EventEnd)
-        </dt>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.CycleRoute.RouteName, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.CycleRoute.RouteName, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                            
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.IsArchived, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                <div class="checkbox">
+                                    @Html.DisplayFor(model => model.IsArchived)
+                                </div>
+                            </div>
+                        </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.EventEnd)
-        </dd>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.IsPublic, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                <div class="checkbox">
+                                    @Html.DisplayFor(model => model.IsPublic)
+                                </div>
+                            </div>
+                        </div>
+                        @Html.ActionLink("Terug", "Index")
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+    <div class="tab-pane fade" id="pills-Users" role="tabpanel" aria-labelledby="pills-Users-tab">
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Location)
-        </dt>
+        <table class="table">
+            <tr>
+                <th>
+                    Voornaam
+                </th>
+                <th>
+                    Achternaam
+                </th>
+                <th>
+                    Woonplaats
+                </th>
+                <th></th>
+            </tr>
 
-        <dd>
-            @Html.DisplayFor(model => model.Location)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Difficulty)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Difficulty)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsArchived)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsArchived)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsPublic)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsPublic)
-        </dd>
-
-    </dl>
+            @foreach (var item in Model.Deelnemers)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Account.FirstName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Account.LastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Account.Residence)
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#_Modal"> Profiel </button>
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+
