--- a/CasusStartToBike/Views/CycleEvents/Edit.cshtml
+++ b/CasusStartToBike/Views/CycleEvents/Edit.cshtml
@@ -39,7 +39,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.EventStart, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.EventStart, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.EventStart, new { htmlAttributes = new { @class = "form-control", @Type = "Date", @Value = Model.EventStart.ToString("yyyy-MM-dd"), @id = "EventStart", @name = "EventStart" } })
                                 @Html.ValidationMessageFor(model => model.EventStart, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -47,7 +47,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.EventEnd, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.EventEnd, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.EventEnd, new { htmlAttributes = new { @class = "form-control", @Type = "Date", @Value = Model.EventStart.ToString("yyyy-MM-dd"), @id = "EventEnd", @name = "EventEnd" } })
                                 @Html.ValidationMessageFor(model => model.EventEnd, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -77,7 +77,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.BadgeId, "BadgeId", htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.DropDownList("BadgeId", null, htmlAttributes: new { @class = "form-control" })
+                                @Html.DropDownListFor(model => Model.BadgeId, new SelectList(ViewBag.Badge, "Id", "BadgeName"), "Selecteer item", htmlAttributes: new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.BadgeId, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.RouteId, "RouteId", htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.DropDownList("RouteId", null, htmlAttributes: new { @class = "form-control" })
+                                @Html.DropDownListFor(model => Model.RouteId, new SelectList(ViewBag.Route, "Id", "RouteName"), "Selecteer item", htmlAttributes: new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.RouteId, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -158,7 +158,7 @@
                     </td>
                     <td>
                         <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#_Modal"> Profiel </button>
-                        <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#_Modal"> Verwijderen </button>
+                        @Html.ActionLink("Verwijder", "Unsubscribe", new { EventId = Model.Id, UserId = item.Id }, new { @class = "btn btn-danger btn-sm" })
                     </td>
                 </tr>
             }
