--- a/CasusStartToBike/Views/CycleRoutes/Edit.cshtml
+++ b/CasusStartToBike/Views/CycleRoutes/Edit.cshtml
@@ -59,14 +59,14 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.BadgeId, "BadgeId", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.DropDownList("BadgeId", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.DropDownListFor(model => Model.BadgeId, new SelectList(ViewBag.Badge, "Id", "BadgeName"), "Selecteer item", htmlAttributes: new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.BadgeId, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Update" class="btn btn-default" />
+                            <input type="submit" value="Update" class="btn btn-primary" />
                         </div>
                     </div>
                 </div>
@@ -90,10 +90,10 @@
                 </table>
                 <div class="row">
                     <div class="col">
-                        <input type="text" class="form-control" id="locationId" placeholder="Location">
+                        <input type="text" class="form-control " id="locationId" placeholder="Location" disabled>
                     </div>
                     <div class="col">
-                        <button type="button" class="btn btn-primary " id="Addmarker" onclick="addRow()">update</button>
+                        <button type="button" class="btn btn-primary " id="Addmarker" onclick="addRow()">Marker toevoegen</button>
                     </div>
                 </div>
             </div>
@@ -106,33 +106,7 @@
 </div>
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
     <script>
-        $('document').ready(function () {
-            var locationlist = '@Html.Raw(ViewBag.Routecollect)';
-            var List = [] = locationlist.split("}{");
-            for (var i = 0; i < List.length; i++) {
-
-                if (i != 0) {
-                    if (i == List.length-1) {
-                        List[i] = "{" + List[i];
-                    } else {
-                        List[i] = "{" + List[i] + "}";
-                    }
-
-                } else {
-                    List[i] = List[i] + "}"
-                }
-
-                document.getElementById('locationId').value = List[i];
-                document.getElementById('Addmarker').onclick();
-
-                var location = JSON.parse(document.getElementById('locationId').value)
-                addMarker(location);
-            }
-
-        });
-
         let map;
         let markers = [];
 
@@ -235,6 +209,31 @@
                 var location = JSON.parse(document.getElementById('locationId').value)
                 addMarker(location);
             });
+
+            //laad markers in pagina waneer map initialiseerd
+            var locationlist = '@Html.Raw(ViewBag.Routecollect)';
+            var List = [] = locationlist.split("}{");
+            for (var i = 0; i < List.length; i++) {
+
+                if (i != 0) {
+                    if (i == List.length-1) {
+                        List[i] = "{" + List[i];
+                    } else {
+                        List[i] = "{" + List[i] + "}";
+                    }
+
+                } else {
+                    List[i] = List[i] + "}"
+                }
+
+                document.getElementById('locationId').value = List[i];
+                document.getElementById('Addmarker').onclick();
+
+                var location = JSON.parse(document.getElementById('locationId').value)
+                addMarker(location);
+                //eind
+            }
+
         };
 
     </script>
