--- a/CasusStartToBike/Views/CycleRoutes/Edit.cshtml
+++ b/CasusStartToBike/Views/CycleRoutes/Edit.cshtml
@@ -67,6 +67,7 @@
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
                             <input type="submit" value="Update" class="btn btn-primary" />
+                            @Html.ActionLink("Terug", "Index",null , new { @class = "btn btn-info" })
                         </div>
                     </div>
                 </div>
@@ -100,10 +101,6 @@
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     <script>
