--- a/CasusStartToBike/Views/CycleRoutes/Index.cshtml
+++ b/CasusStartToBike/Views/CycleRoutes/Index.cshtml
@@ -53,9 +53,9 @@
             @Html.DisplayFor(modelItem => item.Badge.BadgeName)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Bewerk", "Edit", new { id = item.Id }, new { @class = "btn btn-success btn-sm" })
+            @Html.ActionLink("Verwijder", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-sm" })
+            @Html.ActionLink("Inzien", "Details", new { id = item.Id }, new { @class = "btn btn-info btn-sm" })
         </td>
     </tr>
 }
