--- a/CasusStartToBike/Views/Shared/_Layout.cshtml
+++ b/CasusStartToBike/Views/Shared/_Layout.cshtml
@@ -28,6 +28,34 @@
                     <li class="nav-item">@Html.ActionLink("Account", "Index", "Accounts", null, new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("Followers", "Index", "Followers", null, new { @class = "nav-link" })</li>
                 </ul>
+                
+                @if (Session["UserID"] == null)
+                    {
+                        <div class="nav-item">
+                            <div class="text-end">
+                                @Html.ActionLink("Login", "Login", "Access", null, new { @class = "btn btn-outline-light me-2" })
+                                @Html.ActionLink("Registreren", "Register", "Access", null, new { @class = "btn btn-warning" })
+                            </div>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-person-circle">
+
+                                </i>
+                            </a>
+                            <ul class="dropdown-menu " aria-labelledby="Account">
+                                <li>
+                                    @Html.ActionLink("Logout", "Logout", "Access", null, new { @class = "dropdown-item" })
+                                </li>
+                                <li>
+                                    @Html.ActionLink("Profiel", "Edit", "Users", new { id = Convert.ToInt32(Session["UserID"].ToString()) }, new { @class = "dropdown-item" })
+                                </li>
+                            </ul>
+                        </div>
+                    }
             </div>
         </div>
     </Header>
