Edits to reviews, these should work now.

--- a/CasusStartToBike/Views/Badges/Edit.cshtml
+++ b/CasusStartToBike/Views/Badges/Edit.cshtml
@@ -42,7 +42,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Terug", "Index", null, new { @class = "btn btn-success" })
 </div>
 
 @section Scripts {
