--- a/CasusStartToBike/Views/Badges/Index.cshtml
+++ b/CasusStartToBike/Views/Badges/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Nieuwe Aanmaken", "Create", null, new { @class = "btn btn-success" })
 </p>
 <table class="table">
     <tr>
