--- a/CasusStartToBike/Views/CycleEvents/Index.cshtml
+++ b/CasusStartToBike/Views/CycleEvents/Index.cshtml
@@ -170,6 +170,8 @@
                                 {
                                     @Html.ActionLink("Inzien", "Details", new { id = item.Id }, new { @class = "btn btn-info btn-sm" });
                                 }
+
+                                @Html.ActionLink("Reviews", "Index", "Reviews", new { id = item.Id, route = false }, new { @class = "btn btn-dark btn-sm" })
                             }
                         </td>
                     </tr>
