--- a/CasusStartToBike/Views/CycleRoutes/Index.cshtml
+++ b/CasusStartToBike/Views/CycleRoutes/Index.cshtml
@@ -56,6 +56,7 @@
             @Html.ActionLink("Bewerk", "Edit", new { id = item.Id }, new { @class = "btn btn-success btn-sm" })
             @Html.ActionLink("Verwijder", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-sm" })
             @Html.ActionLink("Inzien", "Details", new { id = item.Id }, new { @class = "btn btn-info btn-sm" })
+            @Html.ActionLink("Reviews", "Index", "Reviews", new { id = item.Id, route = true}, new { @class = "btn btn-dark btn-sm" })
         </td>
     </tr>
 }
