Edit to reviews, pinned message to top

--- a/CasusStartToBike/Views/Reviews/Index.cshtml
+++ b/CasusStartToBike/Views/Reviews/Index.cshtml
@@ -29,29 +29,76 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.CycleEvent.EventName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CycleRoute.RouteName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.User.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Rating)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        var userID = Session["UserID"] as string;
+        if (userID != null)
+        {
+
+
+            if (userID == item.Id.ToString())
+            {
+
+
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.CycleEvent.EventName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CycleRoute.RouteName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.User.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Rating)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+            }
+        }
+    }
+
+    @foreach (var item in Model)
+    {
+        var userID = Session["UserID"] as string;
+        if (userID != null)
+        {
+            if (userID == item.Id.ToString())
+            {
+                continue;
+            }
+        }
+
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.CycleEvent.EventName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CycleRoute.RouteName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.User.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Rating)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
