web.config redirect en role name veranderd

--- a/CasusStartToBike/Views/Users/Index.cshtml
+++ b/CasusStartToBike/Views/Users/Index.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.IsActive)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Role)
+            @Html.DisplayNameFor(model => model.User_Role)
         </th>
         <th></th>
     </tr>
@@ -38,7 +38,7 @@
             @Html.DisplayFor(modelItem => item.IsActive)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Role)
+            @Html.DisplayFor(modelItem => item.User_Role)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
