--- a/CasusStartToBike/Views/Users/Details.cshtml
+++ b/CasusStartToBike/Views/Users/Details.cshtml
@@ -35,16 +35,16 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Role)
+            @Html.DisplayNameFor(model => model.User_Role)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Role)
+            @Html.DisplayFor(model => model.User_Role)
         </dd>
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id })*@ |
     @Html.ActionLink("Back to List", "Index")
 </p>
