--- a/CasusStartToBike/Views/Shared/_Layout.cshtml
+++ b/CasusStartToBike/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                                     @Html.ActionLink("Logout", "Logout", "Access", null, new { @class = "dropdown-item" })
                                 </li>
                                 <li>
-                                    @Html.ActionLink("Profiel", "Edit", "Users", new { id = Convert.ToInt32(Session["UserID"].ToString()) }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("Profiel", "Profile", "Users", new { id = Convert.ToInt32(Session["UserID"].ToString()) }, new { @class = "dropdown-item" })
                                 </li>
                             </ul>
                         </div>
