--- a/CasusStartToBike/Views/Users/Profile.cshtml
+++ b/CasusStartToBike/Views/Users/Profile.cshtml
@@ -9,6 +9,18 @@
 
 
 @Html.AntiForgeryToken()
+
+
+
+
+@*<div class="nav-scroller">
+    <nav class="nav nav-underline" aria-label="Secondary navigation">
+
+        <a class="nav-link" href="#">Events</a>
+        <a class="nav-link" href="#">Routes</a>
+        <a class="nav-link" href="#">Badges</a>
+    </nav>
+</div>*@
 <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
     <div class="feature col">
         <p>@Html.DisplayFor(model => model.Account.FirstName)</p>
@@ -31,19 +43,55 @@
     </div>
     <div>
         @Html.ActionLink("Follow", "Profile", "Users", new { id = Convert.ToInt32(Session["UserID"].ToString()) })
-    @*@if (Model.Id == Session.["User.ID"])
-    {
+        @*@if (Model.Id == Session.["User.ID"])
+            {
 
-    }
-    else
-    {
-        <button type="button" onclick="alert('Followed!')">Follow</button>
-    }*@
+            }
+            else
+            {
+                <button type="button" onclick="alert('Followed!')">Follow</button>
+            }*@
 
     </div>
     <br />
     <div>
-        
+
     </div>
-    
+
+</div>
+
+
+<div>
+    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="pills-Public-tab" data-bs-toggle="pill" data-bs-target="#pills-Public" type="button" role="tab" aria-controls="pills-Public" aria-selected="true">Openbaar</button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="nav-link" id="pills-Own-tab" data-bs-toggle="pill" data-bs-target="#pills-Own" type="button" role="tab" aria-controls="pills-Own" aria-selected="false">Mijn Spellen</button>
+        </li>
+    </ul>
+    <!--<div class="tab">
+        <button class="tabcontent" onclick="openCity(event, 'Events">Events</button>
+        <button class="tabcontent" onclick="openCity(event, 'Routes')">Routes</button>
+        <button class="tabcontent" onclick="openCity(event, 'Badges')">Badges</button>
+    </div>-->
+
+    <!-- Tab content -->
+    <!--<div id="Events" class="tabcontent">
+        <h3>Events</h3>
+        <p>Hier komen events.</p>
+    </div>
+
+    <div id="Routes" class="tabcontent">
+        <h3>Routes</h3>
+        <p>Hier komen routes.</p>
+    </div>
+
+    <div id="Badges" class="tabcontent">
+        <h3>Badges</h3>
+        <p>BADGES KOMEN HIIIIIIIIIIIIIIIIIIIIIIIIIIIIEEEEEEEER.</p>
+    </div>-->
+
+
+
 </div>
